feat: explicitly return session token in api login response for swagger usage
